--- a/src/style.css
+++ b/src/style.css
@@ -222,3 +222,10 @@
     padding: 1rem 1rem 1.15rem; /* Adjust padding for mobile view */
   }
 }
+
+
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
