--- a/src/style.css
+++ b/src/style.css
@@ -251,3 +251,9 @@
   padding: 20px; /* Add some padding */
   text-align: center;
 }
+
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
