--- a/src/style.css
+++ b/src/style.css
@@ -1,42 +1,94 @@
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 /* CSS for menu */
 .menu {
   width: 100%;
-  height: 100vh; /* Occupies full viewport height */
-  background-image: url(./assets/AlexBackground.jpg);
-  background-size: cover; /* Ensures the background covers the entire container */
-  background-position: center; /* Center the background image */
+  min-height: 100vh;  
+  background-image: url(./assets/backgroundQF.png);
+  background-size: cover;
+  background-position: center; 
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.menu ul {
-	display: flex;
-	width: 100%;
-	height: 100vh;
-	margin: auto;
-	max-width: 1000px;
-	justify-content: space-between;
-	text-align: center;
-  font-family:fantasy;
-}
 
-.menu li {
-  padding: 1rem 2rem 1.15rem;
-  text-transform: uppercase;
-  cursor: pointer;
+.menu_title{
   color: white;
-	min-width: 80px;
-	margin: auto;
-
-
-  transition: box-shadow 0.3s ease; /* Adding transition for smooth effect */
-
-  /* Initial box-shadow: none */
-  box-shadow: none;
-
+  font-size: 40px;
+  font-family: tahoma;
 }
 
-.menu li:hover {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Shadow effect on hover */
+.menu_chant{
+  color: white;
+  font-size: 20px;
+  font-family: fantasy;
+  margin-bottom: 150px;
 }
+
+.menu_button{
+  margin-bottom: 150px;
+}
+
+.menu_button button {
+  margin: 15px; /* Adjust the value as needed */
+  font-size: 24px;
+  font-family: tahoma;
+}
+
+.menu_button1:hover, .menu_button2:hover, .menu_button3:hover {
+  box-shadow: 0 12px 16px 0 rgba(255, 0, 0, 0.24), 0 17px 50px 0 rgba(255, 0, 0, 0.19);
+}
+
+
+
+@media (max-width: 768px) {
+  .menu_title {
+    font-size: 32px; 
+  }
+  .menu_button{
+    display: flex;
+    flex-direction: column; /* Stacks buttons vertically */
+    align-items: center; /* Aligns buttons to the center */
+  }
+
+  .menu_button button {
+    font-size: 20px;
+    padding: 10px 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  .menu_title {
+    font-size: 24px; 
+  }
+  .menu_button{
+    display: flex;
+    flex-direction: column; /* Stacks buttons vertically */
+    align-items: center; /* Aligns buttons to the center */
+  }
+
+  .menu_button button {
+    font-size: 12px; 
+    padding: 5px 10px; 
+    margin: 5px;
+  }
+}
+
+
 
 /* CSS for ranking */
 
@@ -49,59 +101,9 @@
 }
 
 
-.ranking ul {
-	display: flex;
-	width: 100%;
-	height: 100vh;
-	margin: auto;
-	max-width: 1000px;
-	justify-content: space-between;
-	text-align: center;
-  font-family:fantasy;
-}
-
-
-
-.ranking li {
-  padding: 1rem 2rem 1.15rem;
-  text-transform: uppercase;
-  cursor: pointer;
-  color: white;
-	min-width: 80px;
-	margin: auto;
-}
 
 
 /* CSS for compare */
-
-.compare{
-  width: 100%;
-  height: 100vh; /* Occupies full viewport height */
-  background-image: url(./assets/AlexBackground.jpg);
-  background-size: cover; /* Ensures the background covers the entire container */
-  background-position: center; /* Center the background image */
-}
-
-
-.compare ul {
-	display: flex;
-	width: 100%;
-	height: 100vh;
-	margin: auto;
-	max-width: 1000px;
-	justify-content: space-between;
-	text-align: center;
-  font-family:fantasy;
-}
-
-.compare li {
-  padding: 1rem 2rem 1.15rem;
-  text-transform: uppercase;
-  cursor: pointer;
-  color: white;
-	min-width: 80px;
-	margin: auto;
-}
 
 
 /* CSS for about*/
@@ -115,6 +117,8 @@
   font-family: 'Times New Roman', Times, serif;  
   margin: 0;
   text-align: center;
+  margin-top: 10px; /* Move towards the bottom by 2 cm */
+
 }
 
 .team{
@@ -215,6 +219,7 @@
 
 
 
+/* CSS for home menu */
 .homeMenu {
   display: flex; /* Use Flexbox */
   flex-direction: column; /* Stack children vertically */
@@ -226,7 +231,10 @@
   border-radius: 20px;
   margin: 0 auto; /* Center the .homeMenu itself in the viewport */
   padding: 20px; /* Add some padding */
+  margin-top: 10px; /* Move towards the bottom by 2 cm */
 }
+
+
 
 .logo-container {
   display: flex;
@@ -252,6 +260,11 @@
   text-align: center;
 }
 
+.fighterDetails{
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 
 
 
@@ -276,3 +289,54 @@
 .class5{
   border-style: groove;
 }
+
+
+
+.navbar{
+  background-color: #2f3542;
+  border-style: groove;
+}
+
+
+.navbar ul {
+	display: flex;
+	width: 100%;
+	height: 10vh;
+	margin: auto;
+	max-width: 1000px;
+	justify-content: space-between;
+	text-align: center;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  list-style-type: none; 
+}
+.navbar li {
+  padding: 1rem 2rem 1.15rem;
+  text-transform: uppercase;
+  cursor: pointer;
+  color: white;
+	min-width: 80px;
+	margin: auto;
+  transition: box-shadow 0.3s ease;
+  box-shadow: none;
+
+}
+
+.navbar li:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Shadow effect on hover */
+}
+
+@media (max-width: 768px) {
+  .navbar ul {
+    flex-direction: column; /* Stack items vertically */
+    height: auto; /* Adjust height */
+    padding: 0; /* Adjust padding if necessary */
+  }
+
+  .navbar li {
+    width: 100%; /* Full width for each item */
+    padding: 10px; /* Adjust padding for smaller screens */
+  }
+}
+
+
+
