--- a/src/style.css
+++ b/src/style.css
@@ -45,7 +45,7 @@ html, body, #root {
 
 .menu_button button {
   margin: 15px; /* Adjust the value as needed */
-  font-size: 24px;
+  font-size: 20px;
   font-family: tahoma;
 }
 
@@ -138,7 +138,6 @@ html, body, #root {
   margin: 0;
   text-align: center;
   margin-top: 10px; /* Move towards the bottom by 2 cm */
-
 }
 
 .team{
@@ -247,8 +246,6 @@ html, body, #root {
   grid-template-columns: 35% auto; /* Define two columns, first column is 35% of the container width, and the second column takes the remaining space */
   border-style: groove;
   border-width: 0.2cm;
-  background-color: rgb(70, 70, 71);
-
 }
 
 .homeMenu_favo{
@@ -275,10 +272,6 @@ html, body, #root {
   justify-content: center;
 }
 
-
-
-
-
 .logo-container {
   display: flex;
   justify-content: center; /* Center horizontally */
@@ -303,17 +296,43 @@ html, body, #root {
   text-align: center;
 }
 
+
+@media (max-width: 768px) {
+  .homeMenu {
+    grid-template-columns: 1fr; 
+  }
+
+  .homeMenu_favo, .homeMenu_search {
+    width: 100%;
+  }
+
+  .logo {
+    width: 50px; 
+  }
+
+  .searchBar {
+    padding: 5px;
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+  }
+
+  .searchBar input, .searchBar button {
+    font-size: 12px; 
+    padding: 10px; 
+    width: 100%;
+    margin-bottom: 5px; 
+  }
+}
+
 .fighterDetails{
   justify-content: center;
   align-items: center;
   text-align: center;
 }
 
-
-
-
 .result_button button {
-  margin: 15px; /* Adjust the value as needed */
+  margin: 15px; 
   font-size: 12px;
   font-family: tahoma;
 }
@@ -369,6 +388,7 @@ html, body, #root {
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   list-style-type: none; 
 }
+
 .navbar li {
   padding: 1rem 2rem 1.15rem;
   text-transform: uppercase;
