--- a/src/style.css
+++ b/src/style.css
@@ -314,22 +314,20 @@ html, body, #root {
 
 .homeMenu{
   display: grid;
-  grid-template-columns: 35% auto; /* Define two columns, first column is 35% of the container width, and the second column takes the remaining space */
+  grid-template-columns: 25% 50% 25%;
   border-style: groove;
   border-width: 0.2cm;
 }
 
+
 .homeMenu_favo{
   background-color: #2f3542;
   color: azure;
-  display: flex;
   flex-direction: column;
   grid-row: 1;
   grid-column: 1;
-  width: 35%;
   border-style: groove;
-  text-align: center;
-  
+  text-align: center;  
 }
 
 
@@ -339,7 +337,15 @@ html, body, #root {
   grid-column: 2;
   border-style: groove;
   height: auto;
-  width: 400px;
+  justify-content: center;
+}
+
+.homeMenu_about{
+  background-color: #2f3542;
+  grid-row: 1;
+  grid-column: 3;
+  border-style: groove;
+  height: auto;
   justify-content: center;
 }
 
@@ -400,7 +406,6 @@ html, body, #root {
   display: grid;
   text-align: center;
   grid-template-columns: 33% 33% 33%; /* Define two columns, first column is 35% of the container width, and the second column takes the remaining space */
-
 }
 
 .fighterDetails_basic{
